--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -1,19 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.CheckBox?>
-<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.shape.Circle?>
-
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Button layoutX="278.0" layoutY="186.0" mnemonicParsing="false" text="Button" />
-      <Button layoutX="432.0" layoutY="186.0" mnemonicParsing="false" text="Button" />
-      <ChoiceBox layoutX="63.0" layoutY="72.0" prefWidth="150.0" />
-      <ChoiceBox layoutX="338.0" layoutY="88.0" prefWidth="150.0" />
-      <CheckBox layoutX="98.0" layoutY="229.0" mnemonicParsing="false" text="seçLa beni" />
-      <Circle fill="DODGERBLUE" layoutX="393.0" layoutY="315.0" radius="59.0" stroke="BLACK" strokeType="INSIDE" />
+      <ImageView fitHeight="334.0" fitWidth="583.0" layoutX="9.0" layoutY="37.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@/sample/backGraund.jpg" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
