--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -6,7 +6,9 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.effect.DropShadow?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1080.0" prefWidth="1080.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
    <children>
@@ -15,25 +17,76 @@
             <Image url="@backGraund.png" />
          </image>
       </ImageView>
-      <HBox alignment="CENTER_LEFT" layoutX="165.0" layoutY="845.0" prefHeight="68.0" prefWidth="624.0" style="-fx-background-color: white;">
+
+      <!-- Ana VBox container -->
+      <VBox alignment="CENTER" spacing="10"> <!-- Spacing 10 yapıldı -->
          <children>
-            <Label prefHeight="68.0" prefWidth="203.0" text="Ad Giriniz : ">
-               <font>
-                  <Font size="40.0" />
-               </font>
-            </Label>
-            <TextField fx:id="username" nodeOrientation="LEFT_TO_RIGHT" prefHeight="68.0" prefWidth="421.0" />
+            <!-- Kullanıcı Adı HBox -->
+            <HBox alignment="CENTER" prefHeight="50.0" prefWidth="450.0"
+                  style="-fx-background-color: rgba(255, 255, 255, 0.5); /* Daha saydam */
+                         -fx-background-radius: 12;
+                         -fx-border-color: rgba(0, 0, 0, 0.1);
+                         -fx-border-radius: 12;
+                         -fx-padding: 5 15;">
+               <children>
+                  <Label prefHeight="40.0" prefWidth="160.0" text="Ad Giriniz:"
+                         style="-fx-text-fill: #34495E;
+                                -fx-padding: 0 10 0 0;">
+                     <font>
+                        <Font name="System Bold" size="28.0" />
+                     </font>
+                  </Label>
+                  <TextField fx:id="username" nodeOrientation="LEFT_TO_RIGHT"
+                             prefHeight="40.0" prefWidth="270.0"
+                             style="-fx-background-color: rgba(255, 255, 255, 0.4); /* Daha saydam */
+                                   -fx-background-radius: 8;
+                                   -fx-border-color: rgba(52, 73, 94, 0.2);
+                                   -fx-border-radius: 8;
+                                   -fx-font-size: 22;
+                                   -fx-prompt-text-fill: #95A5A6;
+                                   -fx-padding: 5;">
+                     <font>
+                        <Font size="22.0" />
+                     </font>
+                  </TextField>
+               </children>
+            </HBox>
+
+            <!-- Level HBox -->
+            <HBox alignment="CENTER" prefHeight="50.0" prefWidth="450.0"
+                  style="-fx-background-color: rgba(255, 255, 255, 0.5); /* Daha saydam */
+                         -fx-background-radius: 12;
+                         -fx-border-color: rgba(0, 0, 0, 0.1);
+                         -fx-border-radius: 12;
+                         -fx-padding: 5 15;">
+               <children>
+                  <Label prefHeight="40.0" prefWidth="160.0" text="Level:"
+                         style="-fx-text-fill: #34495E;
+                                -fx-padding: 0 10 0 0;">
+                     <font>
+                        <Font name="System Bold" size="28.0" />
+                     </font>
+                  </Label>
+                  <TextField fx:id="level" nodeOrientation="LEFT_TO_RIGHT"
+                             prefHeight="40.0" prefWidth="270.0"
+                             style="-fx-background-color: rgba(255, 255, 255, 0.4); /* Daha saydam */
+                                   -fx-background-radius: 8;
+                                   -fx-border-color: rgba(52, 73, 94, 0.2);
+                                   -fx-border-radius: 8;
+                                   -fx-font-size: 22;
+                                   -fx-prompt-text-fill: #95A5A6;
+                                   -fx-padding: 5;">
+                     <font>
+                        <Font size="22.0" />
+                     </font>
+                  </TextField>
+               </children>
+            </HBox>
          </children>
-      </HBox>
-      <HBox alignment="CENTER_LEFT" layoutX="165.0" layoutY="925.0" prefHeight="68.0" prefWidth="624.0" style="-fx-background-color: white;">
-         <children>
-            <Label prefHeight="68.0" prefWidth="203.0" text="Level : ">
-               <font>
-                  <Font size="40.0" />
-               </font>
-            </Label>
-            <TextField fx:id="level" nodeOrientation="LEFT_TO_RIGHT" prefHeight="68.0" prefWidth="421.0" />
-         </children>
-      </HBox>
+         <!-- Alt tarafa sabitlenmiş ve yatayda ortalanmış -->
+         <AnchorPane.bottomAnchor>50.0</AnchorPane.bottomAnchor>
+         <AnchorPane.leftAnchor>290.0</AnchorPane.leftAnchor>
+         <AnchorPane.rightAnchor>290.0</AnchorPane.rightAnchor>
+      </VBox>
    </children>
 </AnchorPane>
