--- a/src/sample/sample3.fxml
+++ b/src/sample/sample3.fxml
@@ -1,161 +1,32 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-        <?import javafx.scene.control.Button?>
-        <?import javafx.scene.control.Label?>
-        <?import javafx.scene.image.ImageView?>
-        <?import javafx.scene.image.Image?>
-        <?import javafx.scene.layout.AnchorPane?>
-        <?import javafx.scene.layout.HBox?>
-        <?import javafx.scene.layout.VBox?>
-        <?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
 
-        <?import java.net.URL?>
-<AnchorPane prefHeight="1080.0" prefWidth="1080.0" style="-fx-background-image: url('/sample/backGraund.png'); -fx-background-size: cover;" xmlns="http://javafx.com/javafx/17.0.13" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.UIController">
-            <stylesheets>
-                <URL value="@styles.css"/>
-            </stylesheets>
-            <children>
-            <VBox alignment="CENTER" layoutY="40.0" spacing="20" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
-                <HBox alignment="CENTER" spacing="20">
-                    <children>
-                        <ImageView fx:id="computerCard1" fitHeight="160.0" fitWidth="120.0" pickOnBounds="true" preserveRatio="true">
-                            <image>
-                                <Image url="@/sample/arka1.png"/>
-                            </image>
-                        </ImageView>
-                        <ImageView fx:id="computerCard2" fitHeight="160.0" fitWidth="120.0" pickOnBounds="true" preserveRatio="true">
-                            <image>
-                                <Image url="@/sample/arka1.png"/>
-                            </image>
-                        </ImageView>
-                        <ImageView fx:id="computerCard3" fitHeight="160.0" fitWidth="120.0" pickOnBounds="true" preserveRatio="true">
-                            <image>
-                                <Image url="@/sample/arka1.png"/>
-                            </image>
-                        </ImageView>
-                        <ImageView fx:id="computerCard4" fitHeight="160.0" fitWidth="120.0" pickOnBounds="true" preserveRatio="true">
-                            <image>
-                                <Image url="@/sample/arka1.png"/>
-                            </image>
-                        </ImageView>
-                        <ImageView fx:id="computerCard5" fitHeight="160.0" fitWidth="120.0" pickOnBounds="true" preserveRatio="true">
-                            <image>
-                                <Image url="@/sample/arka1.png"/>
-                            </image>
-                        </ImageView>
-                        <ImageView fx:id="computerCard6" fitHeight="160.0" fitWidth="120.0" pickOnBounds="true" preserveRatio="true">
-                            <image>
-                                <Image url="@/sample/arka1.png"/>
-                            </image>
-                        </ImageView>
-                    </children>
-                </HBox>
-            </VBox>
+<AnchorPane prefHeight="1080.0" prefWidth="1080.0" style="-fx-background-image: url('/sample/backGraund.png'); -fx-background-size: cover;" xmlns="http://javafx.com/javafx/19.0.0" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.UIController">
+    <children>
+        <!-- Bilgisayar kartları -->
+        <HBox fx:id="computerCardsContainer" layoutX="180.0" layoutY="20.0" prefHeight="100.0" prefWidth="720.0" spacing="10">
+            <!-- Bilgisayar kartları buraya dinamik olarak eklenecek -->
+        </HBox>
 
-            <VBox alignment="CENTER" spacing="40" AnchorPane.topAnchor="300.0" AnchorPane.bottomAnchor="300.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
-                <HBox alignment="CENTER" spacing="30">
-                    <children>
-                        <StackPane styleClass="selected-card-slot">
-                            <ImageView fx:id="computerSelectedCard1" fitHeight="160.0" fitWidth="120.0" pickOnBounds="true" preserveRatio="true" />
-                        </StackPane>
-                        <StackPane styleClass="selected-card-slot">
-                            <ImageView fx:id="computerSelectedCard2" fitHeight="160.0" fitWidth="120.0" pickOnBounds="true" preserveRatio="true" />
-                        </StackPane>
-                        <StackPane styleClass="selected-card-slot">
-                            <ImageView fx:id="computerSelectedCard3" fitHeight="160.0" fitWidth="120.0" pickOnBounds="true" preserveRatio="true" />
-                        </StackPane>
-                    </children>
-                </HBox>
+        <!-- Bilgisayar seçili kartları -->
+        <HBox fx:id="computerSelectedCardsContainer" layoutX="360.0" layoutY="150.0" prefHeight="100.0" prefWidth="360.0" spacing="10">
+            <!-- Bilgisayar seçili kartları buraya dinamik olarak eklenecek -->
+        </HBox>
 
-                <HBox alignment="CENTER" spacing="30">
-                    <children>
-                        <StackPane styleClass="selected-card-slot">
-                            <ImageView fx:id="playerSelectedCard1" fitHeight="160.0" fitWidth="120.0" pickOnBounds="true" preserveRatio="true" />
-                        </StackPane>
-                        <StackPane styleClass="selected-card-slot">
-                            <ImageView fx:id="playerSelectedCard2" fitHeight="160.0" fitWidth="120.0" pickOnBounds="true" preserveRatio="true" />
-                        </StackPane>
-                        <StackPane styleClass="selected-card-slot">
-                            <ImageView fx:id="playerSelectedCard3" fitHeight="160.0" fitWidth="120.0" pickOnBounds="true" preserveRatio="true" />
-                        </StackPane>
-                    </children>
-                </HBox>
-            </VBox>
+        <!-- Oyuncu seçili kartları -->
+        <HBox fx:id="playerSelectedCardsContainer" layoutX="360.0" layoutY="300.0" prefHeight="100.0" prefWidth="360.0" spacing="10">
+            <!-- Oyuncu seçili kartları buraya dinamik olarak eklenecek -->
+        </HBox>
 
-            <VBox alignment="CENTER" spacing="20" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
-                <HBox alignment="CENTER" spacing="20">
-                    <children>
-                        <StackPane fx:id="playerCard1Indicator" styleClass="player-card">
-                            <children>
-                                <ImageView fx:id="playerCard1" fitHeight="160.0" fitWidth="120.0" pickOnBounds="true" preserveRatio="true">
-                                    <image>
-                                        <Image url="@/sample/card3.png"/>
-                                    </image>
-                                </ImageView>
-                                <VBox alignment="CENTER" spacing="5">
-                                    <Label fx:id="playerCard1HealthLabel" text="100" textFill="blue" style="-fx-font-size: 16; -fx-font-weight: bold;"/>
-                                    <Label fx:id="playerCard1LevelLabel" text="1" textFill="green" style="-fx-font-size: 14;"/>
-                                </VBox>
-                            </children>
-                        </StackPane>
-                        <StackPane fx:id="playerCard2Indicator" styleClass="player-card">
-                            <children>
-                                <ImageView fx:id="playerCard2" fitHeight="160.0" fitWidth="120.0" pickOnBounds="true" preserveRatio="true">
-                                    <image>
-                                        <Image url="@/sample/card3.png"/>
-                                    </image>
-                                </ImageView>
-                                <VBox alignment="CENTER" spacing="5">
-                                    <Label fx:id="playerCard2HealthLabel" text="100" textFill="blue" style="-fx-font-size: 16; -fx-font-weight: bold;"/>
-                                    <Label fx:id="playerCard2LevelLabel" text="1" textFill="green" style="-fx-font-size: 14;"/>
-                                </VBox>
-                            </children>
-                        </StackPane>
-                        <StackPane fx:id="playerCard3Indicator" styleClass="player-card">
-                            <children>
-                                <ImageView fx:id="playerCard3" fitHeight="160.0" fitWidth="120.0" pickOnBounds="true" preserveRatio="true">
-                                    <image>
-                                        <Image url="@/sample/card3.png"/>
-                                    </image>
-                                </ImageView>
-                                <VBox alignment="CENTER" spacing="5">
-                                    <Label fx:id="playerCard3HealthLabel" text="100" textFill="blue" style="-fx-font-size: 16; -fx-font-weight: bold;"/>
-                                    <Label fx:id="playerCard3LevelLabel" text="1" textFill="green" style="-fx-font-size: 14;"/>
-                                </VBox>
-                            </children>
-                        </StackPane>
-                        <StackPane fx:id="playerCard4Indicator" styleClass="player-card">
-                            <children>
-                                <ImageView fx:id="playerCard4" fitHeight="160.0" fitWidth="120.0" pickOnBounds="true" preserveRatio="true">
-                                    <image>
-                                        <Image url="@/sample/card3.png"/>
-                                    </image>
-                                </ImageView>
-                            </children>
-                        </StackPane>
-                        <StackPane fx:id="playerCard5Indicator" styleClass="player-card">
-                            <children>
-                                <ImageView fx:id="playerCard5" fitHeight="160.0" fitWidth="120.0" pickOnBounds="true" preserveRatio="true">
-                                    <image>
-                                        <Image url="@/sample/card3.png"/>
-                                    </image>
-                                </ImageView>
-                            </children>
-                        </StackPane>
-                        <StackPane fx:id="playerCard6Indicator" styleClass="player-card">
-                            <children>
-                                <ImageView fx:id="playerCard6" fitHeight="160.0" fitWidth="120.0" pickOnBounds="true" preserveRatio="true">
-                                    <image>
-                                        <Image url="@/sample/card3.png"/>
-                                    </image>
-                                </ImageView>
-                            </children>
-                        </StackPane>
-                    </children>
-                </HBox>
-                <Button fx:id="finishButton" text="Bitir" styleClass="finish-button"
-                        style="-fx-font-size: 18; -fx-padding: 10 20; -fx-background-radius: 5;" onAction="#finishGame"/>
-            </VBox>
-        </children>
+        <!-- Oyuncu kartları -->
+        <HBox fx:id="playerCardsContainer" layoutX="180.0" layoutY="800.0" prefHeight="200.0" prefWidth="720.0" spacing="10">
+            <!-- Oyuncu kartları buraya dinamik olarak eklenecek -->
+        </HBox>
 
-        </AnchorPane>
+        <!-- Bitir Butonu -->
+        <Button fx:id="finishButton" layoutX="900.0" layoutY="1000.0" text="Bitir" />
+    </children>
+</AnchorPane>
