--- a/src/sample/sample3.fxml
+++ b/src/sample/sample3.fxml
@@ -3,19 +3,21 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 
-<AnchorPane prefHeight="1080.0" prefWidth="1080.0" style="-fx-background-image: url('/sample/backGraund.png'); -fx-background-size: cover;" xmlns="http://javafx.com/javafx/19.0.0" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.UIController">
+<AnchorPane prefHeight="1080.0" prefWidth="1920.0" style="-fx-background-image: url('/sample/backGraund.png'); -fx-background-size: cover;" xmlns="http://javafx.com/javafx/19.0.0" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.UIController">
     <children>
         <!-- Bilgisayar kartları -->
-        <HBox fx:id="computerCardsContainer" layoutX="180.0" layoutY="20.0" prefHeight="100.0" prefWidth="720.0" spacing="10">
-            <!-- Bilgisayar kartları buraya dinamik olarak eklenecek -->
-        </HBox>
+        <VBox alignment="CENTER" spacing="20" AnchorPane.topAnchor="20.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+            <HBox fx:id="computerCardsContainer" alignment="CENTER" prefHeight="150.0" spacing="10" />
+            <HBox fx:id="computerSelectedCardsContainer" alignment="CENTER" prefHeight="150.0" spacing="10" />
+        </VBox>
 
-        <!-- Oyuncu kartları -->
-        <HBox fx:id="playerCardsContainer" layoutX="180.0" layoutY="800.0" prefHeight="200.0" prefWidth="720.0" spacing="10">
-            <!-- Oyuncu kartları buraya dinamik olarak eklenecek -->
-        </HBox>
-
-        <!-- Bitir Butonu -->
+        <!-- Oyuncu kartları ve seçili kartlar -->
+        <VBox alignment="CENTER" spacing="20" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+            <HBox fx:id="playerSelectedCardsContainer" alignment="CENTER" prefHeight="150.0" spacing="10"/>
+            <HBox fx:id="playerCardsContainer" alignment="CENTER" prefHeight="150.0" spacing="10"/>
+            <Button fx:id="finishButton" text="Bitir" styleClass="game-button" prefWidth="120" prefHeight="40" />
+        </VBox>
     </children>
 </AnchorPane>
