--- a/src/sample/sample3.fxml
+++ b/src/sample/sample3.fxml
@@ -41,7 +41,7 @@
                               -fx-font-weight: bold;"
                        text="Oyuncu Skoru: 0" />
             </StackPane>
-            <Button fx:id="finishButton" text="Bitir"
+            <Button fx:id="finishButton" text="Seçimi Onayla"
                     style="-fx-background-color: #4CAF50;
                            -fx-text-fill: white;
                            -fx-font-size: 16;
