--- a/src/Graphics/FXMLs/sample2.fxml
+++ b/src/Graphics/FXMLs/sample2.fxml
@@ -7,16 +7,16 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.effect.DropShadow?>
 
-<AnchorPane prefHeight="400.0" prefWidth="397.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
+<AnchorPane prefHeight="400.0" prefWidth="397.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Graphics.Controllers.Controller">
    <children>
       <ImageView fitHeight="1080.0" fitWidth="1080.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@backGraund.png" />
+            <Image url="@../Photos/backGraund.png" />
          </image>
       </ImageView>
       <Button layoutX="440.0" layoutY="929.0"
               mnemonicParsing="false"
-              onAction="#switchToSampleScene"
+              onAction="#switchToMainScene"
               prefHeight="59.0"
               prefWidth="200.0"
               text="Başla"
