--- a/src/Graphics/FXMLs/sample3.fxml
+++ b/src/Graphics/FXMLs/sample3.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.layout.StackPane?>
 
-<AnchorPane prefHeight="1080.0" prefWidth="1080.0" style="-fx-background-image: url('/Graphics/Photos/backGraund.png'); -fx-background-size: cover;" xmlns="http://javafx.com/javafx/17.0.13" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Graphics.Controllers.UIController" stylesheets="@styles.css">
+<AnchorPane prefHeight="1080.0" prefWidth="1080.0" style="-fx-background-image: url('/Graphics/Photos/savassahnesi.jpg'); -fx-background-size: cover;" xmlns="http://javafx.com/javafx/17.0.13" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Graphics.Controllers.UIController" stylesheets="@styles.css">
     <children>
         <!-- Bilgisayar kartları ve skor -->
         <VBox alignment="CENTER" spacing="20" AnchorPane.topAnchor="20.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
